--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -12,7 +12,7 @@ on:
         - main
 jobs:
   build:
-    if: github.event.pull_request.merged == true
+    # if: github.event.pull_request.merged == true
     runs-on: ubuntu-22.04
     permissions:
       contents: write
