--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,10 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
+          PATCH_STRING_TOKEN: "fix"
+          MINOR_STRING_TOKEN: "feat"
+          NONE_STRING_TOKEN: "*"
+          
   nightly:
     if: ${{ github.ref_name == 'develop' }}
     runs-on: ubuntu-latest
@@ -61,6 +64,9 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           WITH_V: true
           PRERELEASE: true
+          PATCH_STRING_TOKEN: "fix"
+          MINOR_STRING_TOKEN: "feat"
+          NONE_STRING_TOKEN: "*"
 
       - uses: actions/checkout@v3
         with:
