--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
             "mode": "debug",
             "program": "main.go",
             "args": [
-                "generate"
+                "--disable-update-check",
+                "generate",
+                "--config",
+                "example.config.json"
             ],
         }
 
