--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,8 @@
                 "--config",
                 "example.config.json"
             ],
+            "buildFlags": "-ldflags='-X main.version=0.1.0-beta.0'",
+
         }
 
     ]
